# apps/api/src/db/schema/index.ts
@@ -4,3 +4,4 @@ export * from './users';
 export * from './roles';
 export * from './refresh-tokens';
 export * from './role-permissions';
+export * from './style-books';
